--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mui/material": "^6.4.4",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
