--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
+    "socket.io-client": "^4.8.1",
     "wavesurfer.js": "^7.9.0"
   },
   "devDependencies": {
