--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/material": "^6.4.4",
+    "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
